# LuMeLIR

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: audit.toml
.github/: SECURITY.md  pull_request_template.md
.github/docker/: Dockerfile.ci  Dockerfile.ci-arm64
docs/: PRD.jp.md  PRD.md  README.jp.md
src/: bridge_runtime.rs  lib.rs  main.rs  pipeline.rs
tests/: adr_doc_consistency.rs  phase1_print.rs  phase2_0_local.rs  phase2_0a_globals.rs  phase2_1_assign_blocks.rs  phase2_1a_multi_target_assign.rs  phase2_1b_assign_multi_from_call.rs  phase2_2a_arith.rs  phase2_2b_compare.rs  phase2_2c_floor_and_bitwise.rs  phase2_2d_number_literals.rs  phase2_3a_nil_and_bool_slots.rs  phase2_3b_control_flow.rs  phase2_3c_logical.rs  phase2_3d_for_numeric.rs  phase2_4_break.rs  phase2_4b_repeat_until.rs  phase2_5a_functions.rs  phase2_5b2_function_args.rs  phase2_5b3_function_return.rs  phase2_5b_anon_functions.rs  phase2_5c1_top_level_capture.rs  phase2_5c2_kind_captures.rs  phase2_5c3_capturing_e2e.rs  phase2_5c3_closure_escape.rs  phase2_5c_closures_min.rs  phase2_5c_indirect_ret_kind_reject.rs  phase2_5c_mutual_capturing_recursion_reject.rs  phase2_5d_multi_return.rs  phase2_5e_bool_nil_signatures.rs  phase2_5f_nested_function.rs  phase2_5x_indirect_dispatch.rs  phase2_6a_arr_array_index.rs  phase2_6a_grow_array_push.rs  phase2_6a_min_empty_tables.rs  phase2_6a_wr_array_write.rs  phase2_6b_hash_key_nan.rs  phase2_6b_hash_key_nil.rs  phase2_6b_hash_keys.rs  phase2_6b_hash_keys_kinds.rs  (+194 more)
(+360 files in other folders)
